--- a/app/views/groups/index.html.slim
+++ b/app/views/groups/index.html.slim
@@ -9,6 +9,9 @@ h2= t('common.title.list')
 table#list-table
   tr
     th= Group.human_attribute_name("name")
+    th.link_button_area
   - groups.each do |group|
     tr.selectable.link_to*{"data-url" => group_path(group)} 
       td= group.name
+      td.link_button_area
+      	= link_to '상세보기', group, class: 'btn btn-primary'
