--- a/app/views/expense_reports/index.html.slim
+++ b/app/views/expense_reports/index.html.slim
@@ -22,14 +22,17 @@ h2 Total : #{@expenses.length}
       th= expense_report.class.human_attribute_name(:description)
       th= expense_report.class.human_attribute_name(:amount)
       th= Report.human_attribute_name('status')
+      th.link_button_area
     - @expenses.each do |report|
-      tr.selectable onclick="location.href='#{expense_report_path(report)}'"
+      tr.selectable.link_to*{"data-url" => expense_report_path(report)}
         td= report.employee.fullname rescue ""
         td= t("activerecord.models.#{report.target_type.tableize.singularize}") rescue ""
         td= report.project.name rescue ""
         td= report.description
         td= number_to_currency report.amount
         td= report.localize_status
+        td.link_button_area
+          = link_to '상세보기', report, class: 'btn btn-primary'
   center
     = will_paginate @expenses
 - else
