--- a/app/views/taxbills/index.html.slim
+++ b/app/views/taxbills/index.html.slim
@@ -38,8 +38,9 @@
         th= BusinessClient.human_attribute_name('name')
         th= BusinessClient.human_attribute_name('owner')
         th= Taxbill.human_attribute_name('total')
+        th.link_button_area
       - @taxbills.each do |taxbill|
-        tr.selectable onclick="location.href='#{taxbill_path(taxbill)}'"
+        tr.selectable.link_to*{"data-url" => taxbill_path(taxbill)}
           td=h taxbill.billtype == 'purchase' ? t('taxbills.purchase_bill') : t('taxbills.sales_bill')
           - if taxbill.transacted_at
             td=h taxbill.transacted_at.strftime("%Y-%m-%d")
@@ -57,6 +58,8 @@
               td
           td class="numrow"
             =h number_to_currency taxbill.total
+          td.link_button_area
+            = link_to '상세보기', taxbill, class: 'btn btn-primary'
     br
     center
       = will_paginate @taxbills
