--- a/app/views/ledger_accounts/show.html.slim
+++ b/app/views/ledger_accounts/show.html.slim
@@ -1,7 +1,7 @@
 #show_command
   = link_to t('common.title.edit'), [:edit, ledger_account]
   = " | "
-  = link_to t('common.title.destroy'), ledger_account, :method => :delete, data: {data: {confirm: t("common.messages.delete_confirm")}}
+  = link_to t('common.title.destroy'), ledger_account, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
   = " | "
   = link_to t('common.title.list'), :ledger_accounts
 
