--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-<%= render(:partial => "shared/header") %>
+<%= render "header" %>
 <div class='container'>
   <div id="header">
     <div id="quick-search">
@@ -29,6 +29,6 @@
     <%= yield %>
   </div>
 </div>
-<%= render(:partial => "shared/footer") %>
+<%= render "footer" %>
 </body>
 </html>
