--- a/app/views/layouts/login.html.slim
+++ b/app/views/layouts/login.html.slim
@@ -19,4 +19,4 @@ html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
           .flash.alert
             = flash[:alert]
         = yield
-      = render(:partial => "shared/footer")
+      = render "footer"
