--- a/app/views/taxbills/index.html.slim
+++ b/app/views/taxbills/index.html.slim
@@ -24,7 +24,10 @@
 #show_command
     = link_to t('taxbills.total.link'), [:total, :taxbills]
     = " | "
-    = link_to t('common.title.new'), [:new, :taxbill]
+    - unless Taxbill.no_taxman_and_client
+      = link_to t('common.title.new'), [:new, :taxbill]
+    - else
+      = link_to t('common.title.new'), "#", class: 'no-taxman-and-client'
 
 - unless @taxbills.empty?
     h2
@@ -66,4 +69,9 @@
 - else
   h3
     = t 'taxbills.index.empty'
+
+coffee:
+  $(".no-taxman-and-client").click (event)->
+    event.preventDefault();
+    alert("거래처(Taxman)와 거래처 담당자(BusinessClient)를 먼저 생성해주세요");
 
