--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -8,7 +8,7 @@ h2
   = project.name
 .box
   dl
-    - if current_person.admin? or project.owner.id == current_person.employee.id
+    - if current_person.admin? or project.owner == current_person.employee
       = dtdd project, "revenue"
     = dtdd project, "started_on"
     = dtdd project, "ending_on"
@@ -23,5 +23,5 @@ h2
         br
     - if project.completed?
       = dtdd project, "ended_on"
-- if current_person.admin? or project.owner.id == current_person.employee.id
+- if current_person.admin? or project.owner == current_person.employee
   = render 'expense'
