--- a/app/views/main/_main_menu2.html.slim
+++ b/app/views/main/_main_menu2.html.slim
@@ -19,6 +19,8 @@ div class={current_person.admin? ? "admin" : ""}
         li= link_to t("cardbills.index.title"), :controller => "cardbills"
         - if current_person.permission? 'bank_accounts'
           li= link_to t("bank_accounts.index.title"), :bank_accounts
+        - if current_person.permission? 'bankbooks'
+          li= link_to t("bankbooks.title"), :bankbooks
         - if current_person.permission? 'taxbills'
           li= link_to t("taxbills.index.title"), :taxbills
         li= link_to t("expense_reports.index.title"), :expense_reports
