--- a/app/views/groups/_form.html.slim
+++ b/app/views/groups/_form.html.slim
@@ -10,6 +10,9 @@ h2= t("common.title.#{action_name}")
       = f.label :name
       = f.text_field :name
     p
+      = f.label :parent_id
+      = f.select :parent_id, options_for_groups_select(group, group.parent)
+    p
       = f.label :employees
       - Person.with_employee.without_retired.each do |person|
         - if person.account.present?
