--- a/app/views/payment_records/_form.html.slim
+++ b/app/views/payment_records/_form.html.slim
@@ -9,4 +9,7 @@ h2= t("common.title.#{action_name}")
     p
       = f.label :name
       = f.text_field :name
+    p
+      = f.label :bankbook_id
+      = f.select :bankbook_id, options_for_bankbooks_select(@payment_record.bankbook)
   = f.submit
