--- a/app/views/payment_records/show.html.slim
+++ b/app/views/payment_records/show.html.slim
@@ -9,3 +9,5 @@ h2= t('common.title.show')
 
 dl
   =dtdd @payment_record, "name"
+  dt= @payment_record.class.human_attribute_name(:bankbook)
+  dd= @payment_record.bankbook.name rescue ""
