--- a/app/views/card_approved_sources/find_empty_cardbills.html.slim
+++ b/app/views/card_approved_sources/find_empty_cardbills.html.slim
@@ -1,4 +1,6 @@
 #show_command
+  = link_to t('card_approved_sources.generate.link'), [:generate_cardbills, :card_approved_sources]
+  = " | "
   = link_to t('common.title.back'), :card_approved_sources
 
 h2
