--- a/app/views/business_clients/show.html.slim
+++ b/app/views/business_clients/show.html.slim
@@ -3,12 +3,10 @@
 #show_command
   = link_to t('common.title.edit'), [:edit, business_client]
   = " | "
-  = link_to t('common.title.destroy'), business_client, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
-  = " | "
   = link_to t('common.title.list'), :business_clients
 h2
   =h business_client.name
-  
+
 .box
   #descr
     dl
@@ -17,6 +15,8 @@ h2
       = dtdd business_client, "category"
       = dtdd business_client, "business_status"
       = dtdd business_client, "address"
+      dt= BusinessClient.human_attribute_name(:bankbook)
+      dd= business_client.bankbook.name rescue ""
       dt
         = Taxman.model_name.human
       - unless business_client.taxmen.empty?
