--- a/app/views/documents/show.html.slim
+++ b/app/views/documents/show.html.slim
@@ -22,9 +22,9 @@ h2
     h3
       = t(".backlink")
     ul
-      - u = document.account_for_tag(Employee.model_name.human)
-      - if u
-        li= link_to Employee.model_name.human, :controller => "employees", :action => "show", :id => u.employee
+      - account = document.account_for_tag(Employee.model_name.human)
+      - if account
+        li= link_to Employee.model_name.human, :controller => "employees", :action => "show", :id => account.person.employee
   = render "shared/attachments/detail", :target => document
   .clear
 = render 'reports/info', target: document
