--- a/app/views/documents/index.html.slim
+++ b/app/views/documents/index.html.slim
@@ -42,5 +42,6 @@ table#list-table
         td.link_button_area
           = link_to '상세보기', document, class: 'btn btn-primary'
 br
+div.clear
 center
   = will_paginate @cardbills
