--- a/app/views/payments/show.html.slim
+++ b/app/views/payments/show.html.slim
@@ -7,7 +7,8 @@
     = " | "
   = link_to t('employees.show.title'), employee_path(employee)
   = " | "
-  = link_to t('common.title.back'), :payments
+  = link_to t('common.title.back'), :back
+
 h2
   = employee.fullname
 
