--- a/app/views/payments/show.html.slim
+++ b/app/views/payments/show.html.slim
@@ -37,7 +37,7 @@ table#list-table
           - current_bg = 'white'
       tr style="background-color:#{ current_bg };"
         td
-          = show_sum ? month : ''
+          = show_sum ? "#{month}.#{current_company.payday}" : ''
         td
           = payment.pay_start.strftime("%m.%d")
         td
