--- a/app/views/groups/_form.html.slim
+++ b/app/views/groups/_form.html.slim
@@ -17,10 +17,7 @@ h2= t("common.title.#{action_name}")
       - Person.with_employee.without_retired.each do |person|
         - if person.account.present?
           = check_box_tag "group[person_ids][]", person.id, group.people.include?(person)
-          - if person.employee
-            = "#{person.fullname}(#{person.name})"
-          - else
-            = person.name
+          = name_with_id(person)
         br
   p
     = f.submit
