--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -432,6 +432,7 @@ ul#css3menu li.sublast>a{
   color: #A5A4A4;
   letter-spacing: -1px;
   word-spacing: 3px;
+  margin-left: 25px;
   border: none;
 }
 .menubar ul {
