--- a/app/views/taxbills/index.html.slim
+++ b/app/views/taxbills/index.html.slim
@@ -26,43 +26,19 @@
     = " | "
     - unless Taxbill.no_taxman_and_client
       = link_to t('common.title.new'), [:new, :taxbill]
+      = " | "
+      = link_to t('common.title.excel'), [:excel, :taxbills]
     - else
       = link_to t('common.title.new'), "#", class: 'no-taxman-and-client'
-
+      = " | "
+      = link_to t('common.title.excel'), "#", class: 'no-taxman-and-client'
 - unless @taxbills.empty?
     h2
-      = t('taxbills.index.total_eng') 
+      = t('taxbills.index.total_eng')
       ' :
       = @taxbills.size
     table#list-table
-      tr
-        th= Taxbill.human_attribute_name('billtype')
-        th= Taxbill.human_attribute_name('transacted_at')
-        th= BusinessClient.human_attribute_name('name')
-        th= BusinessClient.human_attribute_name('owner')
-        th= Taxbill.human_attribute_name('total')
-        th.link_button_area
-      - @taxbills.each do |taxbill|
-        tr.selectable.link_to*{"data-url" => taxbill_path(taxbill)}
-          td=h taxbill.billtype == 'purchase' ? t('taxbills.purchase_bill') : t('taxbills.sales_bill')
-          - if taxbill.transacted_at
-            td=h taxbill.transacted_at.strftime("%Y-%m-%d")
-          - else
-            td
-          - if taxbill.taxman
-            td
-              span
-                =h taxbill.taxman.business_client.name
-            td
-              span
-                =h taxbill.taxman.business_client.owner
-          - else
-              td
-              td
-          td class="numrow"
-            =h number_to_currency taxbill.total
-          td.link_button_area
-            = link_to '상세보기', taxbill, class: 'btn btn-primary'
+      = render 'list'
     br
     center
       = will_paginate @taxbills
