--- a/app/views/taxbills/preview.html.slim
+++ b/app/views/taxbills/preview.html.slim
@@ -17,4 +17,88 @@ br
 
 h3
   = t('taxbills.preview.preview')
-  = render 'list'
+table#list-table
+  tr
+    th= TaxbillItem.human_attribute_name(:transacted_at)
+    th= TaxbillItem.human_attribute_name(:note)
+    th= TaxbillItem.human_attribute_name(:unitprice)
+    th= TaxbillItem.human_attribute_name(:quantity)
+    th= TaxbillItem.human_attribute_name(:total)
+    th= TaxbillItem.human_attribute_name(:tax)
+    th= TaxbillItem.human_attribute_name(:taxbill_id)
+    th= TaxbillItem.human_attribute_name(:created_at)
+    th= TaxbillItem.human_attribute_name(:updated_at)
+    th= TaxbillItem.human_attribute_name(:uid)
+    th= TaxbillItem.human_attribute_name(:written_at)
+    th= TaxbillItem.human_attribute_name(:approve_no)
+    th= TaxbillItem.human_attribute_name(:transmit_at)
+    th= TaxbillItem.human_attribute_name(:seller_registration_number)
+    th= TaxbillItem.human_attribute_name(:sellers_minor_place_registration_number)
+    th= TaxbillItem.human_attribute_name(:sellers_company_name)
+    th= TaxbillItem.human_attribute_name(:sellers_representative)
+    th= TaxbillItem.human_attribute_name(:buyer_registration_number)
+    th= TaxbillItem.human_attribute_name(:buyers_minor_place_registration_number)
+    th= TaxbillItem.human_attribute_name(:buyers_company_name)
+    th= TaxbillItem.human_attribute_name(:buyerss_representative)
+    th= TaxbillItem.human_attribute_name(:supplied_value)
+    th= TaxbillItem.human_attribute_name(:taxbill_classification)
+    th= TaxbillItem.human_attribute_name(:taxbill_type)
+    th= TaxbillItem.human_attribute_name(:issue_type)
+    th= TaxbillItem.human_attribute_name(:etc)
+    th= TaxbillItem.human_attribute_name(:bill_action_type)
+    th= TaxbillItem.human_attribute_name(:section)
+    th= TaxbillItem.human_attribute_name(:seller)
+    th= TaxbillItem.human_attribute_name(:seller_email)
+    th= TaxbillItem.human_attribute_name(:buyer1)
+    th= TaxbillItem.human_attribute_name(:buyer1_email)
+    th= TaxbillItem.human_attribute_name(:buyer2)
+    th= TaxbillItem.human_attribute_name(:buyer2_email)
+    th= TaxbillItem.human_attribute_name(:item_date)
+    th= TaxbillItem.human_attribute_name(:item_name)
+    th= TaxbillItem.human_attribute_name(:item_standard)
+    th= TaxbillItem.human_attribute_name(:item_supply_price)
+    th= TaxbillItem.human_attribute_name(:item_tax)
+    th= TaxbillItem.human_attribute_name(:item_note)
+  - @taxbill_items.each do |item|
+    tr.selectable
+      td= item.transacted_at
+      td= item.note
+      td= item.unitprice
+      td= item.quantity
+      td= item.total
+      td= item.tax
+      td= item.taxbill_id
+      td= item.created_at
+      td= item.updated_at
+      td= item.uid
+      td= item.written_at
+      td= item.approve_no
+      td= item.transmit_at
+      td= item.seller_registration_number
+      td= item.sellers_minor_place_registration_number
+      td= item.sellers_company_name
+      td= item.sellers_representative
+      td= item.buyer_registration_number
+      td= item.buyers_minor_place_registration_number
+      td= item.buyers_company_name
+      td= item.buyerss_representative
+      td= item.supplied_value
+      td= item.taxbill_classification
+      td= item.taxbill_type
+      td= item.issue_type
+      td= item.etc
+      td= item.bill_action_type
+      td= item.section
+      td= item.seller
+      td= item.seller_email
+      td= item.buyer1
+      td= item.buyer1_email
+      td= item.buyer2
+      td= item.buyer2_email
+      td= item.item_date
+      td= item.item_name
+      td= item.item_standard
+      td= item.item_supply_price
+      td= item.item_tax
+      td= item.item_note
+
