--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -63,30 +63,31 @@ div#main_nav.navbar.navbar-fixed-top
                 li= link_to t("business_clients.index.title"), :business_clients
               li= link_to t("contacts.index.title"), :contacts
 
-        ul.nav
-          li.dropdown
-            a.dropdown-toggle*{"data-toggle"=>"dropdown", "href"=>"#"}
-              = t("main.index.admin")
-              b.caret
-            ul.dropdown-menu
-              li= link_to t("commutes.index.title"), :commutes
-              li= link_to t("vacations.index.title"), :vacations
-              li= link_to t("vacation_types.title"), :vacation_types
-              li= link_to t("payments.title"), :payments
-              li= link_to t("accounts.index.title"), :accounts
-              li= link_to t("groups.title"), :groups
-              li= link_to t("payroll_categories.title"), :payroll_categories
-              li= link_to t("payrolls.title"), :payrolls
-              li= link_to t("creditcards.title"), :creditcards
-              li= link_to t("attachments.title"), :attachments
-              li= link_to t("permissions.title"), :permissions
-              li= link_to t("change_histories.title"), :change_histories
-              li= link_to t("holidays.title"), :holidays
-              li= link_to t("dayworker_taxes.title"), :dayworker_taxes
-              li= link_to t("payment_records.title"), :payment_records
-              li= link_to t("promissories.title"), :promissories
-              li= link_to t("enrollments.title"), :enroll_reports
-              li= link_to t("companies.title"), current_company
+        - if current_person.admin?
+          ul.nav
+            li.dropdown
+              a.dropdown-toggle*{"data-toggle"=>"dropdown", "href"=>"#"}
+                = t("main.index.admin")
+                b.caret
+              ul.dropdown-menu
+                li= link_to t("commutes.index.title"), :commutes
+                li= link_to t("vacations.index.title"), :vacations
+                li= link_to t("vacation_types.title"), :vacation_types
+                li= link_to t("payments.title"), :payments
+                li= link_to t("accounts.index.title"), :accounts
+                li= link_to t("groups.title"), :groups
+                li= link_to t("payroll_categories.title"), :payroll_categories
+                li= link_to t("payrolls.title"), :payrolls
+                li= link_to t("creditcards.title"), :creditcards
+                li= link_to t("attachments.title"), :attachments
+                li= link_to t("permissions.title"), :permissions
+                li= link_to t("change_histories.title"), :change_histories
+                li= link_to t("holidays.title"), :holidays
+                li= link_to t("dayworker_taxes.title"), :dayworker_taxes
+                li= link_to t("payment_records.title"), :payment_records
+                li= link_to t("promissories.title"), :promissories
+                li= link_to t("enrollments.title"), :enroll_reports
+                li= link_to t("companies.title"), current_company
 
         ul.nav.pull-right
           li.divider-vertical
