--- a/app/views/cardbills/index.html.slim
+++ b/app/views/cardbills/index.html.slim
@@ -4,7 +4,8 @@
   = form_tag :cardbills, :method => :get do
     = t("common.title.search")
     ' : 
-    = text_field_tag 'query', params[:query]
+    = search_field_tag 'query', params[:query]
+    = submit_tag "검색"
     = select_tag :creditcard_id, options_from_collection_for_select([Creditcard.new(:cardno => "all")]+Creditcard.all, :id, :cardno_long, params[:creditcard_id]), "onchange" => "this.form.submit()"
     = render 'accessors/search_form'
 
