--- a/app/views/contacts/index.html.slim
+++ b/app/views/contacts/index.html.slim
@@ -2,7 +2,8 @@
   = form_tag :contacts, :method => :get do
     = t("common.title.search")
     = " : "
-    = text_field_tag 'query', params[:query]
+    = search_field_tag 'query', params[:query]
+    = submit_tag "검색"
 
 #show_command
   = link_to t('contacts.save.link'), [:save, :contacts]
