--- a/app/views/documents/index.html.slim
+++ b/app/views/documents/index.html.slim
@@ -5,7 +5,8 @@
     = render 'reports/search_form'
     = t("common.title.search")
     ' :
-    = text_field_tag 'query', params[:query]
+    = search_field_tag 'query', params[:query]
+    = submit_tag "검색"
     = render 'accessors/search_form'
 #show_command
   = link_to t('documents.new.title'), new_document_path
