--- a/app/views/employees/index.html.slim
+++ b/app/views/employees/index.html.slim
@@ -3,7 +3,8 @@
     = hidden_field_tag 'retired', @retired
     = t("common.title.search")
     ' :
-    = text_field_tag 'q', params[:q]
+    = search_field_tag 'q', params[:q]
+    = submit_tag "검색"
     - if current_person.admin?
       = select_tag :search_type, options_for_select(Employee::SEARCH_TYPE, params[:search_type]), "onchange" => "this.form.submit()"
 
