--- a/app/views/card_approved_sources/generate.html.slim
+++ b/app/views/card_approved_sources/generate.html.slim
@@ -6,6 +6,6 @@ h2= t('.title')
 = form_tag [:generate_cardbills, :card_approved_sources] do
   p
     = label_tag :owner, t('.owner')
-    = select_tag :owner, options_for_select(Person.without_retired.with_account.map{|person| [person.name, person.id]})
+    = select_tag :owner, options_for_access_people_select
   p
     = submit_tag t('.submit')
