add investments link to header

--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -86,6 +86,7 @@ div#main_nav.navbar.navbar-fixed-top
                 li= link_to t("payment_records.title"), :payment_records
                 li= link_to t("promissories.title"), :promissories
                 li= link_to t("enrollments.title"), :enroll_reports
+                li= link_to t("investments.title"), :investments
                 li= link_to t("companies.title"), current_company
 
         ul.nav.pull-right
