--- a/app/views/investments/show.html.slim
+++ b/app/views/investments/show.html.slim
@@ -14,7 +14,7 @@ h3 투자자산 기본정보
     dd= @investment.description
 
 #show_command
-  = link_to t("common.title.new"), [:new, @investment, :estimation]
+  = link_to t("common.title.new"), [:new, @investment, :investment_estimation]
 
 h3 투자자산 내역
 .box
