--- a/app/views/reports/_info.html.slim
+++ b/app/views/reports/_info.html.slim
@@ -8,7 +8,7 @@ p
   = t('reports.info.status')
   = " - #{target.localize_status}"
 
-- if target.access?(current_person, :write)
+- if target.report?
   - unless target.approve?(current_person)
     = form_tag :report do
       = hidden_field_tag :target_type, target.class
