--- a/app/views/reports/_log.html.slim
+++ b/app/views/reports/_log.html.slim
@@ -5,6 +5,6 @@
         = "["
         = comment.created_at.strftime("%Y.%m.%d %H:%M:%S")
         = "]"
-        = comment.owner.fullname
+        = comment.owner.fullname rescue ""
         = ": "
         = comment.description
